@@ -9,6 +9,11 @@ Changes
   method in grokcore.component.testing anymore. Use z3c.testsetup
   instead.
 
+* Allow functions that have been marked with @grok.subscriber also be
+  registered with ``zope.component.provideHandler()`` manually.  This
+  is useful for unit tests where you may not want to grok a whole
+  module.
+
 1.4 (2008-06-11)
 ----------------
 
